--- a/Beamer/Diapo_generation_terrain.tex
+++ b/Beamer/Diapo_generation_terrain.tex
@@ -17,11 +17,14 @@
 
 \usetheme{Warsaw}
 
-\title{Comment simuler numériquement les alpes ?}
+\title{Comment simuler numériquement l'évolution de la géomorphologie alpines ?}
 \subtitle{Sujet de TPE}
 \author{Gros Alexis, Manceau Thibaut, Porteries Tristan}
+\logo{\includegraphics[height=0.5cm]{blender.png}}
 
 \makeindex
+
+\useoutertheme{infolines}
 
 \begin{document}
 
@@ -30,26 +33,19 @@
 
 % Sommaire
 \begin{frame}{Sommaire}
-\AtBeginSection[]
-{
-  \begin{frame}
-    \frametitle{sommaire}
-    \begin{multicols}{2}
-      {\small
-        \tableofcontents[currentsection, hideothersubsections]}
-    \end{multicols}
-  \end{frame}
-}
+\small \tableofcontents
 \end{frame}
 
-\begin{frame}{Pourquoi simuler un terrain numériquement en 3D ?}
-  \begin{enumerate}
-    \item Afin de mieux représenter les reliefs par rapport à la 2D. Les ombrages aident à l'effet de relief;
-    \item Utilisation dans les jeux vidéo.
-  \end{enumerate}
+\section{Déroulement du projet sur SysMl}
+\begin{frame}
+   \begin{center}
+      \includegraphics[width=8cm]{sysml.png}
+   \end{center}
+   Pour organiser le déroulement du projet nous avons réalisé un diagramme avec SysMl.
 \end{frame}
 
-\begin{frame}{Les chunks}
+\section{Les chunks}
+\begin{frame}
   Définition : Ce sont des morceaux de terrain carrés composés du même nombre de vertices formant une grille déformée en profondeur (Z).
   Tous ces vertices forment des triangles.
   \begin{center}
@@ -57,7 +53,8 @@
   \end{center}
 \end{frame}
 
-\begin{frame}{Les arbres binaires à 2 dimensions (QuadTree)}
+\section{Les arbres binaires à 2 dimensions (QuadTree)}
+\begin{frame}
   C'est un arbre à 2 dimensions qui pour chaque noeud (carré 2D) contient 4 sous noeuds 2 fois plus petit.
   Chaque fonction d'un noeud peut être appliquée à ses sous noeuds.
   \begin{center}
@@ -66,7 +63,23 @@
   \end{center}
 \end{frame}
 
-\begin{frame}{La Visibilité des noeuds dans le champ de vue (Frustum Culling)}
+\section{La subdivision des noeuds}
+\begin{frame}
+  Chaque noeud est subdivisé en fonction de la distance du bord le plus proche de ce noeud vers la caméra.
+  \begin{algorithmic}[1]
+    \STATE $d = \max(\left\|\overrightarrow{CN}\right\| - r, 0)$
+    \FOR{$n$ de $0$ jusqu'à $(n_{max} - 1)$}
+      \IF{$\frac{d_{max} \times n}{n_{max}} <= d < \frac{d_{max} \times (n + 1)}{n_{max}}$}
+	\RETURN $n_{max} - n$
+      \ENDIF
+    \ENDFOR
+  \end{algorithmic}
+  $n_{max}$ : niveau de subdivisions maximale, $C$ : position de la caméra, $N$ : centre du noeud, 
+  $d_{max}$ : distance maximale pour subdiviser un noeud, $r$ : rayon du noeud.
+\end{frame}
+
+\section{La Visibilité des noeuds dans le champ de vue (Frustum Culling)}
+\begin{frame}
     Pour savoir si un noeud est visible on teste si sa boîte englobante alignée (AABB) est dans le champ de la caméra.
     \begin{center}
       \includegraphics[width=2cm]{frustum_culling_cone.png}
@@ -78,51 +91,30 @@
 \end{frame}
 
 \begin{frame}
-\begin{multicols}{2}
-  \begin{algorithmic}[1]
-    \STATE $c_0 = 0$
-    \FOR{$p$ de $0$ jusqu'à $6$}
+  \begin{multicols}{2}
+    \begin{algorithmic}[1]
       \STATE $c_1 = 0$
-      \FOR{$v$ de $0$ jusqu'à $8$}
-	\IF{$\overrightarrow{P_p} \ldotp \overrightarrow{B_v} < 0$}
+      \FOR{$p$ de $1$ jusqu'à $6$}
+	\STATE $c_2 = 0$
+	\FOR{$v$ de $1$ jusqu'à $8$}
+	  \IF{$\overrightarrow{P_p} \ldotp \overrightarrow{B_v} < 0$}
+	    \STATE $c_2 = c_2 + 1$
+	  \ENDIF
+	\ENDFOR
+	\IF{$c_2 = 8$}
+	  \RETURN Dehors
+	\ELSE
 	  \STATE $c_1 = c_1 + 1$
 	\ENDIF
       \ENDFOR
-      \IF{$c_1 = 8$}
-	\RETURN Dehors
+      \IF{$c_1 > 0$}
+	\RETURN Intersection
       \ELSE
-	\STATE $c_0 = c_0 + 1$
+	\RETURN Interieur
       \ENDIF
-    \ENDFOR
-    \IF{$c_1 > 0$}
-      \RETURN Intersection
-    \ELSE
-      \RETURN Interieur
-    \ENDIF
-  \end{algorithmic}
-\end{multicols}
-
-  $P_n$ : matrice $4 \times 4$ du plan $n$ de la caméra, $B_n$ : la position du coin $n$ de la boîte de visibilité.
+    \end{algorithmic}
+  \end{multicols}
+  $P_n$ : matrice $4 \times 3$ du plan $n$ de la caméra, $B_n$ : la position du coin $n$ de la boîte de visibilité.
 \end{frame}
-
-
-\begin{frame}{La subdivision des noeuds}
-  Chaque noeud est subdivisé en fonction de la distance du bord le plus proche d'un noeud vers la caméra.
-  \begin{algorithmic}[1]
-    \STATE $d = \max(\left\|\overrightarrow{CN}\right\| - r, 0)$
-    \FOR{$n$ de $n_{max}$ jusqu'à $1$}
-      \IF{$d_{max} \times \frac{n}{n_{max}} > d >= d_{max} \times \frac{n -1}{n_{max}}$}
-	\RETURN $n$
-      \ENDIF
-    \ENDFOR
-  \end{algorithmic}
-  $n_{max}$ : niveau de subdivisions maximale, $C$ : position de la caméra, $N$ : centre du noeud, 
-  $d_{max}$ : distance maximale pour subdiviser un noeud, $r$ : rayon du noeud.
-
-  
-\end{frame}
-
-
-
 
 \end{document}
