Ajout d'une partie sur l'haloclastie

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -106,6 +106,7 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
   \item la desquamation~: C'est un enlèvement de lames de roche en pelure d'oignon~;
   \item l'hydroclastie~: C'est un processus de fracturation lié aux changements de la teneur en eau de la roche. L'eau provoque également un gonflement de l'argile et augmente la pression hydrostatique.
   Lorsque l'eau s'évapore, elle provoque une fracturation par dessiccation (qui correspond au phénomène de desquamation, mais avec des formes s'organisant en réseau de fentes).
+  \item l'haloclastie~: Elle est due aux cristaux de sel laissés par de l'eau qui s'est évaporée. Ces cristaux de sels vont alors creuser la roche, et ainsi potentiellement la fragmenter.
 \end{itemize}
 
 \subsubsection{L'altération biologique}
