--- a/Beamer/Synthese.tex
+++ b/Beamer/Synthese.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[frenchb]{babel}
 
@@ -10,15 +10,25 @@
 
 \maketitle
 
+\tableofcontents
+
 \begin{abstract}
 
 \end{abstract}
+
+\section{Choix de l'équipe}
+
+Le choix de l'équipe ne m'a pas pris beaucoup de temps, en effet Thibaut Manceau, Alexis Gros et moi étions plutôt avancés au niveau des connaissances informatiques, et nous avions déjà travaillés ensemble avant sur d'autre projets sans problèmes majeurs.
+
+\section{Choix de la problématique}
 
 Le choix du sujet et de la problématique a duré plusieurs séances, nous étions au début partie sur le domaine de la vidéo et plus précisément de la localisation d'une camera pour un rendu en temps réel des images de synthèses.
 Puis nous avons changé pour une TPE sur la sécurité sur internet mais trouvant ce sujet bien trop vague nous nous sommes mit d'accord sur la simulation de terrain.
 En effet depuis bien longtemps Alexis et mois travaillons sur une génération de terrains 3D optimisé pour les jeux vidéos.
 Nous nous sommes dit alors que nos travaux pourraient servir au TPE, mais pour créer et non simplement expliquer des travaux déjà finit, nous avons changé de cap pour la simulation d'un terrain basé sur la déformation des plaques tectoniques.
 Notre problématique finale à était~: « Comment simuler numériquement la géomorphologie de type alpine ».
+
+\section{Résumé du carnet de bord}
 
 Pour commencer nous nous sommes renseignés sur le sujet de la simulation géomorphologique, nous trouvâmes très peu d'informations.
 Les seules informations trouvées était quelque thèses du siècle dernier traitant principalement la parallélisation du calcule.
